--- a/baseapp-ios-core-v1/src/FilePreviewer/Resources/Base.lproj/FilePreviewer.storyboard
+++ b/baseapp-ios-core-v1/src/FilePreviewer/Resources/Base.lproj/FilePreviewer.storyboard
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BKp-63-bFq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BKp-63-bFq">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--PDF View Controller-->
+        <!--FilePreviewController-->
         <scene sceneID="49G-f5-hCz">
             <objects>
-                <viewController storyboardIdentifier="FilePreviewController" automaticallyAdjustsScrollViewInsets="NO" id="BKp-63-bFq" userLabel="PDF View Controller" customClass="FilePreviewController" customModule="baseapp_ios_core_v1" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FilePreviewController" automaticallyAdjustsScrollViewInsets="NO" id="BKp-63-bFq" userLabel="FilePreviewController" customClass="FilePreviewController" customModule="baseapp_ios_core_v1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PeO-Ci-PlM">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="641"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
